<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Application -->
    <string name="app_name">FrSky Dashboard</string>
    <string name="author">Espen Solbu</string>

    <!-- Activities -->
    <string name="activity_module_settings">FrSky Alarms</string>
    <string name="activity_application_settings">Application Settings</string>
    <string name="activity_channel_settings">Channel Configuration</string>
    <string name="activity_simulator">Simulator</string>
    <string name="activity_model_configuration">Model Configuration</string>
    <string name="activity_model_management">Module Management</string>
    <string name="activity_debug">Debug</string>
    <string name="activity_maps">Map</string>
    <string name="hello">Hello World, Frskydash!</string>
    <string name="about">About</string>
    <string name="customUnits">Custom Units</string>
    <string name="rawUnits">Raw</string>
    <string name="RSSItx">RSSItx</string>
    <string name="RSSIrx">RSSIrx</string>
    <string name="FPS">FPS</string>

    <!-- Menu items -->
    <string name="menu_choose_model_management_label">Models...</string>
    <string name="settings_label">Settings...</string>
    <string name="settings_title">Global Settings</string>
    <string name="settings_shortcut">s</string>
    <string name="setFrSkyAlarms">Set FrSky Alarms</string>
    <string name="menu_choose_simulator_label">Simulator...</string>
    <string name="menu_choose_hub_channel_activity">Hub Channels</string>
    <string name="scan_bluetooth_label">BT scan</string>
    <string name="scan_bluetooth_title">Scan for new BT devices</string>
    <string name="connect_bluetooth_label">Connect...</string>
    <string name="connect_bluetooth_title">Connect to BT device</string>
    <string name="disconnect_bluetooth_label">Disconnect...</string>
    <string name="disconnect_bluetooth_title">Disconnect</string>

    <!-- Application settings -->
    <string name="loggerSettings">Logger Settings</string>
    <string name="btSettings">Bluetooth Settings</string>
    <string name="btAutoEnable">Auto-enable Bluetooth</string>
    <string name="btAutoConnect">Auto-connect to last device</string>
    <string name="logToRaw">Log frames to Binary file</string>
    <string name="logToHuman">Log frames to Human readable file (for debug use)</string>
    <string name="logToCsv">Log frames to CSV file</string>
    <string name="speakerSettings">Audio Settings</string>
    <string name="chkAutoSetVolume">Set minimum volume upon startup</string>
    <string name="btAutoSendAlarms">Auto-send FrSky alarms when swapping model</string>
    <string name="btnDeleteLogs">Delete all logfiles</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <!-- Activity Dashboard -->
    <string name="dash_configCurrentModel">Configure Current Model</string>

    <!-- DeviceListActivity -->
    <string name="scanning">scanning for devices...</string>
    <string name="select_device">select a device to connect</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="none_found">No devices found</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="button_scan">Scan for devices</string>
    <string name="intervalForCyclicSpeak">Speaker Interval (sec)</string>
    <string name="defaults">Default</string>
    <string name="commands">Commands</string>
    <string name="save">Save</string>
    <string name="cyclicSpeakerEnabledAtStartup">Cyclic speaker enabled at startup</string>

    <!-- Channel configuration -->
    <string name="chConf_Description">Description</string>
    <string name="chConf_SourceChannel">Source Channel</string>
    <string name="chConf_Unit">Unit (used when spoken)</string>
    <string name="chConf_Offset">Offset</string>
    <string name="chConf_CalibOffset">Calibrate Offset (Altitude)</string>
    <string name="chConf_CalibOffsetDefault">Default (0.0)</string>
    <string name="chConf_Factor">Factor</string>
    <string name="chConf_CalibFactor">Calibrate Factor (Cell Voltage)</string>
    <string name="chConf_CalibFactorDefault">Default (1.0)</string>
    <string name="chConf_Precision">Precision - Number of Decimals shown</string>
    <string name="chConf_MovingAverage">Moving Average (samples, 0 for no average)</string>
    <string name="chConf_SpeechEnabled">Spoken Cyclic</string>
    <string name="chConf_shortUnit">Short Unit (used in the displays)</string>

    <!-- Model management -->
    <string name="models">Models</string>
    <string name="addModel">Add Model</string>

    <!-- Model configuration -->
    <string name="modelConf_Description">Description</string>
    <string name="modelConf_ModelType">Model Type</string>
    <string name="modelConf_Channels">Channels</string>
    <string name="modelConf_addChannel">Add Channel</string>
    <string name="modelConf_frSkyAlarms">FrSky Alarms</string>
    <string name="modelConf_HubType">Hub Type</string>

    <string-array name="model_types">
 <!-- Translators, note that the order is important -->
        <item>Other</item>
        <item>Helicopter</item>
        <item>Airplane</item>
        <item>Car</item>
        <item>Boat</item>
        <item>Multirotor</item>
    </string-array>
    <string-array name="rpm_blade_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>
    <string-array name="rpm_blade_labels">
        <item>1 blade</item>
        <item>2 blades</item>
        <item>3 blades</item>
        <item>4 blades</item>
    </string-array>

    <string name="btnExportModels">Export Models</string>
    <string name="btnImportModels">Import Models</string>
    <string name="title_activity_activity_hub_dashboard">ActivityHubDashboard</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>

</resources>